app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  scroll-behavior: smooth;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

body {
  font-family: Arial, Helvetica, sans-serif;
}

body::-webkit-scrollbar {
  display: none;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

@layer base {
  :root {
    --background: 223.8136 0.0005% 98.6829%;
    --foreground: 0 0% 0%;
    --card: 223.8136 -172.5242% 100%;
    --card-foreground: 0 0% 0%;
    --popover: 223.8136 0.0005% 98.6829%;
    --popover-foreground: 0 0% 0%;
    --primary: 0 0% 0%;
    --primary-foreground: 223.8136 -172.5242% 100%;
    --secondary: 223.8136 0.0001% 92.1478%;
    --secondary-foreground: 0 0% 0%;
    --muted: 223.8136 0.0002% 96.0587%;
    --muted-foreground: 223.8136 0% 32.3067%;
    --accent: 223.8136 0.0001% 92.1478%;
    --accent-foreground: 0 0% 0%;
    --destructive: 358.4334 74.912% 59.7455%;
    --destructive-foreground: 223.8136 -172.5242% 100%;
    --border: 223.8136 0.0001% 89.5577%;
    --input: 223.8136 0.0001% 92.1478%;
    --ring: 0 0% 0%;
    --chart-1: 40.6655 100.2361% 50.9228%;
    --chart-2: 223.749 85.9924% 55.8092%;
    --chart-3: 223.8136 0% 64.471%;
    --chart-4: 223.8136 0.0001% 89.5577%;
    --chart-5: 223.8136 0% 45.6078%;
    --sidebar: 223.8136 0.0005% 98.6829%;
    --sidebar-foreground: 0 0% 0%;
    --sidebar-primary: 0 0% 0%;
    --sidebar-primary-foreground: 223.8136 -172.5242% 100%;
    --sidebar-accent: 223.8136 0.0001% 92.1478%;
    --sidebar-accent-foreground: 0 0% 0%;
    --sidebar-border: 223.8136 0.0001% 92.1478%;
    --sidebar-ring: 0 0% 0%;
    --font-sans: Geist, sans-serif;
    --font-serif: Georgia, serif;
    --font-mono: Geist Mono, monospace;
    --radius: 0.5rem;
    --shadow-2xs: 0px 1px 2px 0px hsl(0 0% 0% / 0.09);
    --shadow-xs: 0px 1px 2px 0px hsl(0 0% 0% / 0.09);
    --shadow-sm:
      0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 1px 2px -1px hsl(0 0% 0% / 0.18);
    --shadow:
      0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 1px 2px -1px hsl(0 0% 0% / 0.18);
    --shadow-md:
      0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 2px 4px -1px hsl(0 0% 0% / 0.18);
    --shadow-lg:
      0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 4px 6px -1px hsl(0 0% 0% / 0.18);
    --shadow-xl:
      0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 8px 10px -1px hsl(0 0% 0% / 0.18);
    --shadow-2xl: 0px 1px 2px 0px hsl(0 0% 0% / 0.45);
  }

  .dark {
    --background: 0 0% 0%;
    --foreground: 223.8136 -172.5242% 100%;
    --card: 223.8136 0% 3.5452%;
    --card-foreground: 223.8136 -172.5242% 100%;
    --popover: 223.8136 0% 6.8692%;
    --popover-foreground: 223.8136 -172.5242% 100%;
    --primary: 223.8136 -172.5242% 100%;
    --primary-foreground: 0 0% 0%;
    --secondary: 223.8136 0% 13.1499%;
    --secondary-foreground: 223.8136 -172.5242% 100%;
    --muted: 223.8136 0% 11.304%;
    --muted-foreground: 223.8136 0% 64.471%;
    --accent: 223.8136 0% 19.8916%;
    --accent-foreground: 223.8136 -172.5242% 100%;
    --destructive: 359.9132 100.2494% 67.8807%;
    --destructive-foreground: 0 0% 0%;
    --border: 223.8136 0% 14.0871%;
    --input: 223.8136 0% 19.8916%;
    --ring: 223.8136 0% 64.471%;
    --chart-1: 40.6655 100.2361% 50.9228%;
    --chart-2: 218.1624 90.0354% 55.1618%;
    --chart-3: 223.8136 0% 45.6078%;
    --chart-4: 223.8136 0% 32.3067%;
    --chart-5: 223.8136 0.0001% 89.5577%;
    --sidebar: 223.8136 0% 6.8692%;
    --sidebar-foreground: 223.8136 -172.5242% 100%;
    --sidebar-primary: 223.8136 -172.5242% 100%;
    --sidebar-primary-foreground: 0 0% 0%;
    --sidebar-accent: 223.8136 0% 19.8916%;
    --sidebar-accent-foreground: 223.8136 -172.5242% 100%;
    --sidebar-border: 223.8136 0% 19.8916%;
    --sidebar-ring: 223.8136 0% 64.471%;
    --font-sans: Geist, sans-serif;
    --font-serif: Georgia, serif;
    --font-mono: Geist Mono, monospace;
    --radius: 0.5rem;
    --shadow-2xs: 0px 1px 2px 0px hsl(0 0% 0% / 0.09);
    --shadow-xs: 0px 1px 2px 0px hsl(0 0% 0% / 0.09);
    --shadow-sm:
      0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 1px 2px -1px hsl(0 0% 0% / 0.18);
    --shadow:
      0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 1px 2px -1px hsl(0 0% 0% / 0.18);
    --shadow-md:
      0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 2px 4px -1px hsl(0 0% 0% / 0.18);
    --shadow-lg:
      0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 4px 6px -1px hsl(0 0% 0% / 0.18);
    --shadow-xl:
      0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 8px 10px -1px hsl(0 0% 0% / 0.18);
    --shadow-2xl: 0px 1px 2px 0px hsl(0 0% 0% / 0.45);
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
  h1 {
    @apply scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl;
  }
  h2 {
    @apply scroll-m-20 pb-2 text-3xl font-semibold tracking-tight first:mt-0;
  }
  h3 {
    @apply scroll-m-20 text-2xl font-semibold tracking-tight;
  }
  h4 {
    @apply scroll-m-20 text-xl font-semibold tracking-tight;
  }
  p {
    @apply leading-7 text-muted-foreground max-w-2xl;
  }
  blockquote {
    @apply mt-6 border-l-2 pl-6 italic;
  }
}

.container {
  padding-left: 0.75rem;
  padding-right: 0.75rem;
}

@media (min-width: 768px) {
  .container {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

.container-padding {
  @apply px-4 sm:px-6 lg:px-8;
}

.section-shadow {
  box-shadow:
    0px 1px 4px 0px hsl(var(--border)) inset,
    0px -1px 4px 0px hsl(var(--border)) inset;
}

